dotnet/GoGitDotNet/NativeMethods.cs

// Code generated by gogit-interop/generate. DO NOT EDIT.
#nullable enable
using System.Runtime.InteropServices;

namespace GoGitDotNet;

internal static partial class NativeMethods
{
    private const string LibName = "libgogit";

    // Memory management

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitFreeString(IntPtr s);

    public static string? ConsumeGoString(IntPtr ptr)
    {
        if (ptr == IntPtr.Zero)
            return null;

        var str = Marshal.PtrToStringUTF8(ptr);
        GitFreeString(ptr);
        return str;
    }

    public static void ThrowIfError(IntPtr errPtr)
    {
        if (errPtr == IntPtr.Zero)
            return;

        var msg = Marshal.PtrToStringUTF8(errPtr);
        GitFreeString(errPtr);
        throw new GoGitException(msg ?? "unknown error");
    }

    // Repository top-level functions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPlainClone(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        long oHandle,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPlainCloneContext(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        long oHandle,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPlainInit(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        int isBare,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPlainOpen(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPlainOpenWithOptions(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        long oHandle,
        out long handleOut);

    // Remote methods

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRemoteFetch(
        long rHandle, long oHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRemoteFetchContext(
        long rHandle, long oHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRemoteList(
        long remoteHandle, long optsHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRemotePush(
        long rHandle, long oHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRemotePushContext(
        long rHandle, long oHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRemoteString(
        long rHandle, out IntPtr strOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitNewRemote(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string url, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRemoteConfigName(
        long remoteHandle, out IntPtr nameOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRemoteConfig(
        long remoteHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitRemoteFree(long rHandle);

    // Repository methods

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryBlobObject(
        long rHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string h, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryBlobObjects(
        long rHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryBranch(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryBranches(
        long rHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryCommitObject(
        long rHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string h, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryCommitObjects(
        long rHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryConfig(
        long repoHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryCreateBranch(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string hash);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryCreateRemote(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string url,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryCreateRemoteAnonymous(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string url,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryCreateTag(
        long rHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string name, [MarshalAs(UnmanagedType.LPUTF8Str)] string hash, long optsHandle, out IntPtr refNameOut, out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryDeleteBranch(
        long rHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryDeleteObject(
        long rHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string hash);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryDeleteRemote(
        long rHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryDeleteTag(
        long rHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryFetch(
        long rHandle, long oHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryFetchContext(
        long rHandle, long oHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryHead(
        long rHandle, out IntPtr refNameOut, out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryLog(
        long rHandle, long oHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryMerge(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string refName,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string hash,
        long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryNotes(
        long rHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryPush(
        long rHandle, long oHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryPushContext(
        long rHandle, long oHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryReference(
        long rHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string name, int resolved, out IntPtr refNameOut, out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryReferences(
        long rHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryRemote(
        long rHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string name, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryResolveRevision(
        long rHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string @in, out IntPtr strOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryTag(
        long rHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string name, out IntPtr refNameOut, out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryTagObject(
        long rHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string h, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryTagObjects(
        long rHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryTags(
        long rHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryTreeObject(
        long rHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string h, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryTreeObjects(
        long rHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryWorktree(
        long rHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryRemotes(
        long repoHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneInMemory(
        long optsHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitBlame(
        long commitHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryStoreBlob(
        long rHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string dataBase64,
        out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryGetTreeEntries(
        long rHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string treeHash,
        out IntPtr jsonOut);
